// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabulator /> should have two different levels of headings 1`] = `
.c4 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  border: 0;
}

.c0 {
  margin-bottom: 2rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: relative;
  top: 1px;
  margin: 0;
  padding: 0;
  max-width: 100%;
  list-style-type: none;
  overflow-x: auto;
}

.c2 {
  margin-right: 0.25rem;
  padding: 0.625rem 1rem;
  font-size: 1.1rem;
  background-color: #ebeff3;
  border: 1px solid #c9d3df;
  border-bottom: 1px solid #005994;
  border-radius: 0.2rem 0.2rem 0 0;
  cursor: pointer;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2[aria-selected="true"] {
  color: #fff;
  background-color: #005994;
}

.c3.react-tabs__tab-panel--selected {
  padding: 1rem;
  border: 1px solid #005994;
  border-radius: 0 0.25rem 0.25rem 0.25rem;
}

@media (max-width:980px) {
  .c1 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (max-width:980px) {
  .c2 {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    margin: 0.25rem;
    border-bottom: 1px solid #c9d3df;
    border-radius: 0.2rem;
  }
}

@media (max-width:980px) {
  .c3.react-tabs__tab-panel--selected {
    margin-top: 0.25rem;
    border-radius: 0.25rem;
  }
}

<div>
  <div
    class="c0"
    data-tabs="true"
  >
    <ul
      class="c1"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-1"
        aria-disabled="false"
        aria-selected="true"
        class="c2 react-tabs__tab--selected"
        id="react-tabs-0"
        role="tab"
        tabindex="0"
      >
        CDI
      </li>
      <li
        aria-controls="react-tabs-3"
        aria-disabled="false"
        aria-selected="false"
        class="c2"
        id="react-tabs-2"
        role="tab"
      >
        CDD
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-0"
      class="c3 react-tabs__tab-panel--selected"
      id="react-tabs-1"
      role="tabpanel"
    >
      <div
        class="c4"
      >
        <h2>
          CDI
        </h2>
      </div>
      <h3>
        titre 1
      </h3>
      <p>
        paragraphe 1
      </p>
    </div>
    <div
      aria-labelledby="react-tabs-2"
      class="c3"
      id="react-tabs-3"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`<Tabulator /> should incease heading levels if not 0 1`] = `
.c4 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  border: 0;
}

.c0 {
  margin-bottom: 2rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: relative;
  top: 1px;
  margin: 0;
  padding: 0;
  max-width: 100%;
  list-style-type: none;
  overflow-x: auto;
}

.c2 {
  margin-right: 0.25rem;
  padding: 0.625rem 1rem;
  font-size: 1.1rem;
  background-color: #ebeff3;
  border: 1px solid #c9d3df;
  border-bottom: 1px solid #005994;
  border-radius: 0.2rem 0.2rem 0 0;
  cursor: pointer;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2[aria-selected="true"] {
  color: #fff;
  background-color: #005994;
}

.c3.react-tabs__tab-panel--selected {
  padding: 1rem;
  border: 1px solid #005994;
  border-radius: 0 0.25rem 0.25rem 0.25rem;
}

@media (max-width:980px) {
  .c1 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (max-width:980px) {
  .c2 {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    margin: 0.25rem;
    border-bottom: 1px solid #c9d3df;
    border-radius: 0.2rem;
  }
}

@media (max-width:980px) {
  .c3.react-tabs__tab-panel--selected {
    margin-top: 0.25rem;
    border-radius: 0.25rem;
  }
}

<div>
  <div
    class="c0"
    data-tabs="true"
  >
    <ul
      class="c1"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-5"
        aria-disabled="false"
        aria-selected="true"
        class="c2 react-tabs__tab--selected"
        id="react-tabs-4"
        role="tab"
        tabindex="0"
      >
        CDI
      </li>
      <li
        aria-controls="react-tabs-7"
        aria-disabled="false"
        aria-selected="false"
        class="c2"
        id="react-tabs-6"
        role="tab"
      >
        CDD
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-4"
      class="c3 react-tabs__tab-panel--selected"
      id="react-tabs-5"
      role="tabpanel"
    >
      <div
        class="c4"
      >
        <h4>
          CDI
        </h4>
      </div>
      <h5>
        titre 1
      </h5>
      <p>
        paragraphe 1
      </p>
    </div>
    <div
      aria-labelledby="react-tabs-6"
      class="c3"
      id="react-tabs-7"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`<Tabulator /> should render 1`] = `
.c4 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  border: 0;
}

.c0 {
  margin-bottom: 2rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: relative;
  top: 1px;
  margin: 0;
  padding: 0;
  max-width: 100%;
  list-style-type: none;
  overflow-x: auto;
}

.c2 {
  margin-right: 0.25rem;
  padding: 0.625rem 1rem;
  font-size: 1.1rem;
  background-color: #ebeff3;
  border: 1px solid #c9d3df;
  border-bottom: 1px solid #005994;
  border-radius: 0.2rem 0.2rem 0 0;
  cursor: pointer;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2[aria-selected="true"] {
  color: #fff;
  background-color: #005994;
}

.c3.react-tabs__tab-panel--selected {
  padding: 1rem;
  border: 1px solid #005994;
  border-radius: 0 0.25rem 0.25rem 0.25rem;
}

@media (max-width:980px) {
  .c1 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (max-width:980px) {
  .c2 {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    margin: 0.25rem;
    border-bottom: 1px solid #c9d3df;
    border-radius: 0.2rem;
  }
}

@media (max-width:980px) {
  .c3.react-tabs__tab-panel--selected {
    margin-top: 0.25rem;
    border-radius: 0.25rem;
  }
}

<div>
  <div
    class="c0"
    data-tabs="true"
  >
    <ul
      class="c1"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-9"
        aria-disabled="false"
        aria-selected="true"
        class="c2 react-tabs__tab--selected"
        id="react-tabs-8"
        role="tab"
        tabindex="0"
      >
        CDI
      </li>
      <li
        aria-controls="react-tabs-11"
        aria-disabled="false"
        aria-selected="false"
        class="c2"
        id="react-tabs-10"
        role="tab"
      >
        CDD
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-8"
      class="c3 react-tabs__tab-panel--selected"
      id="react-tabs-9"
      role="tabpanel"
    >
      <div
        class="c4"
      >
        <h5>
          CDI
        </h5>
      </div>
      <h6>
        titre 1
      </h6>
      <p>
        paragraphe 1
      </p>
    </div>
    <div
      aria-labelledby="react-tabs-10"
      class="c3"
      id="react-tabs-11"
      role="tabpanel"
    />
  </div>
</div>
`;
